--- a/empresa.html
+++ b/empresa.html
@@ -19,7 +19,7 @@
 <body>
   <div class"container">
     <div class="header">
-      <center><a href="index.html"><img src="logo_apple.png"></a></center>
+      <center><a href="index.html"><img src="img/logo_apple.png"></a></center>
     </div>
     <div class="navbar">
       <div class="topnav" id="myTopnav">
@@ -35,7 +35,7 @@
 
     </div>
     <div class="content2">
-      <center><img src="apple.png"></a></center>
+      <center><img src="img/apple.png"></a></center>
     </div>
     </div> 
     <div class="footer">
