Adição da página contato. Criação do link da página contato.

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <<meta name="viewport" 
+  <meta name="viewport" 
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
   <title>test</title>
@@ -23,11 +23,11 @@
       </div>
     <div class="navbar">
       <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <a href="empresa.html">Empresa</a>
         <a href="produtos.html">Produtos</a>
         <a href="localizacao.html">Locazição</a>
-        <a href="contato.html">Contato</a>
+        <a href="contato.html"class="active">Contato</a>
         <a href="carrinho.html">Carrinho</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -36,21 +36,11 @@
 
     </div>
     <div class="content2">
-      <center><a href="index.html"><img src="img/iphone_13.png" alt="" style="width: 100px; height: auto;" ></a></center>
-      <center><p>Iphone 13 Pro Max</p></center>
-      <center><p>9000,00</p></center>   
-      <center><a href="carrinho.html"><button class="btn">COMPRAR</button></a></center><br>
-      
-      <center><img src="img/iphone 13 pro max.jpg" alt="" style="width: 100px; height: auto;"></center><br>
-      <center><p>Iphone 11 Pro Max</p></center>
-      <center><p>7000,00</p></center>   
-      <center><a href="carrinho.html"><button class="btn">COMPRAR</button></a></center><br>
-
-      <center><img src="img/iphone xr.jpg" alt="" style="width: 100px; height: auto;"></center><br>
-      <center><p>Iphone XR</p></center>
-      <center><p>3500,00</p></center>   
-      <center><a href="carrinho.html"><button class="btn">COMPRAR</button></a></center><br>
-
+        <br>
+        <center><p>Entre em Contato!</p></center>
+        <br>
+        <center><a href="https://api.whatsapp.com/send?phone=5551997109459"><img src="img/whatsapp.png" style="width: 200px; height: auto;"></a></center>
+        <br>
     </div>
     </div> 
     <div class="footer">
