--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
         <a href="empresa.html">Empresa</a>
         <a href="produtos.html">Produtos</a>
         <a href="localizacao.html">Localização</a>
-        <a href="contanto.html">Contato</a>
+        <a href="contato.html">Contato</a>
         <a href="carrinho.html">Carrinho</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
